# CUDA

./: vector_addition.cu
EU_Options_Monte_Carlo/: CMakeLists.txt  README.md
EU_Options_Monte_Carlo/include/: cpu_benchmark.hpp
EU_Options_Monte_Carlo/src/: cpu_benchmark.cpp  main.cpp
EU_Options_Monte_Carlo/src/cuda/: kernels.cu  rng_curand.cu
accelerated_monte_carlo_simulator/: CMakeLists.txt  README.md
accelerated_monte_carlo_simulator/include/: config.hpp  rng.hpp  types.hpp
accelerated_monte_carlo_simulator/include/cuda/: kernels.cuh
grayscale_conversion/: grayscale  grayscale_conversion.cu
